--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE HTML>
-<html>	
-	<body style = "text-align:center;">
+<!DOCTYPE html>
+<html>
+  <body style="text-align: center">
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
-    <script src="main.js"></script>
-    <script src="send.js"></script>
-    <button onclick="sendSol()">Send Test</button>
-	</body>
-</html>	
-
-
-
+    <script
+      src="main.js"
+      id="test"
+      button-text="Donate Here"
+      to-address="9fuYBoRvgptU4fVZ8ZqvWTTc6oC68P4tjuSA2ySzn6Nv"
+      sol-amount="1"
+    ></script>
+  </body>
+</html>
