--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
     <script
       src="main.js"
-      id="test"
+      id="solButton"
       button-text="Donate Here"
       to-address="9fuYBoRvgptU4fVZ8ZqvWTTc6oC68P4tjuSA2ySzn6Nv"
       sol-amount="1"
