--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       id="solButton"
       button-text="Donate Here"
       to-address="9fuYBoRvgptU4fVZ8ZqvWTTc6oC68P4tjuSA2ySzn6Nv"
-      sol-amount="1"
+      sol-amount=".1"
+      network="devnet"
     ></script>
   </body>
 </html>
