fixing naming references

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <body style="text-align: center">
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
     <script
-      src="main.js"
+      src="https://cdn.jsdelivr.net/gh/IanandAaron/phantom-wallet-button@main/main.js"
       id="solButton"
-      button-text="Donate Here"
-      to-address="9fuYBoRvgptU4fVZ8ZqvWTTc6oC68P4tjuSA2ySzn6Nv"
-      sol-amount=".1"
+      button-text="send me 1 sol"
       network="devnet"
-    ></script>
+      destination-address="9fuYBoRvgptU4fVZ8ZqvWTTc6oC68P4tjuSA2ySzn6Nv"
+      sol-amount=".1"
+    >
+    </script>
   </body>
 </html>
