--- a/index.html
+++ b/index.html
@@ -5,26 +5,11 @@
     <script
       src="main.js"
       id="solButton"
-      button-text="Support us by donating 5$ in Sol "
+      button-text="support us by donating 5$"
       network="devnet"
       destination-address="9fuYBoRvgptU4fVZ8ZqvWTTc6oC68P4tjuSA2ySzn6Nv"
       sol-amount="0.03510496384188724"
-      button-style="
-      color: white;
-      background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
-      flex: 1 1 auto;
-      margin: 0px;
-      padding: 30px;
-      text-align: center;
-      text-transform: uppercase;
-      transition: 0.5s;
-      background-size: 200% auto;
-      color: white;
-      text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-      box-shadow: 0 0 20px #eee;
-      border-radius: 10px;
-      font-family: 'Montserrat', sans-serif;
-      "
+      button-style="      color: white;       background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);       flex: 1 1 auto;       margin: 0px;       padding: 30px;       text-align: center;       text-transform: uppercase;       transition: 0.5s;       background-size: 200% auto;       color: white;       text-shadow: 0px 0px 10px rgba(0,0,0,0.2);       box-shadow: 0 0 20px #eee;       border-radius: 10px;"
     ></script>
   </body>
 </html>
