--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body style="text-align: center">
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
     <script
-      src="main.js"
+      src="https://cdn.jsdelivr.net/gh/IanandAaron/phantom-wallet-button@latest/main.js"
       id="solButton"
       button-text="Support us by donating 5$ in Sol"
       network="devnet"
